--- a/ExploratoryDataAnalysis/Author_Anthropology.ipynb
+++ b/ExploratoryDataAnalysis/Author_Anthropology.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 2,
    "id": "ebafcb11",
    "metadata": {},
    "outputs": [],
@@ -54,19 +54,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4896cf03",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "482754"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# num authors:\n",
+    "\n",
+    "len ( set ( wsb['author']))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c9c67243",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "None                394635\n",
+       "WSBVoteBot            1422\n",
+       "Onboarding92          1104\n",
+       "AutoModerator          643\n",
+       "patrickbateman02       344\n",
+       "                     ...  \n",
+       "StonkWonker             56\n",
+       "Briterac                56\n",
+       "pmekonnen               56\n",
+       "OliverDatlon            56\n",
+       "Unsquidabls             56\n",
+       "Name: author, Length: 100, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wsb['author'].value_counts().head(100)"
+   ]
   },
   {
    "cell_type": "code",
