--- a/ExploratoryDataAnalysis/Pairplots.ipynb
+++ b/ExploratoryDataAnalysis/Pairplots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "12572d20",
    "metadata": {},
    "outputs": [],
@@ -21,22 +21,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "08d753dc",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-110bdd7699e2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mwsb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_pickle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'../Data/wsb_cleaned.pkl'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -175,9 +163,364 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "34103f6c",
+   "metadata": {},
+   "source": [
+    "Explanation of why num_comments and score seem orthogonal \n",
+    "- this probably has to do with the weekly threads. So we should remove those."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f0377af5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>author</th>\n",
+       "      <th>created_datetime_utc</th>\n",
+       "      <th>selftext</th>\n",
+       "      <th>url</th>\n",
+       "      <th>upvote_ratio</th>\n",
+       "      <th>ups</th>\n",
+       "      <th>total_awards_received</th>\n",
+       "      <th>num_comments</th>\n",
+       "      <th>num_crossposts</th>\n",
+       "      <th>is_self</th>\n",
+       "      <th>is_video</th>\n",
+       "      <th>media_only</th>\n",
+       "      <th>id</th>\n",
+       "      <th>created_utc</th>\n",
+       "      <th>selftext_html</th>\n",
+       "      <th>author_fullname</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>104195</th>\n",
+       "      <td>WSB Saturday Chat</td>\n",
+       "      <td>zjz</td>\n",
+       "      <td>2020-04-18 21:27:15</td>\n",
+       "      <td>This definitely isn't a ploy to inflate our co...</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>10358</td>\n",
+       "      <td>42</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>g3vew6</td>\n",
+       "      <td>1.587245e+09</td>\n",
+       "      <td>&lt;!-- SC_OFF --&gt;&lt;div class=\"md\"&gt;&lt;p&gt;This definit...</td>\n",
+       "      <td>t2_4nc92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75319</th>\n",
+       "      <td>The GME Afterhours Thread: Part 4.20 on 27 Jan...</td>\n",
+       "      <td>grebfar</td>\n",
+       "      <td>2021-01-27 21:26:35</td>\n",
+       "      <td>Stop spamming copy pastes you boomers. Instaba...</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>27614</td>\n",
+       "      <td>346</td>\n",
+       "      <td>94198</td>\n",
+       "      <td>2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>l6er79</td>\n",
+       "      <td>1.611783e+09</td>\n",
+       "      <td>&lt;!-- SC_OFF --&gt;&lt;div class=\"md\"&gt;&lt;p&gt;Stop spammin...</td>\n",
+       "      <td>t2_6oif2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65024</th>\n",
+       "      <td>The GME Thread Part 1 for January 26, 2021</td>\n",
+       "      <td>zjz</td>\n",
+       "      <td>2021-01-26 11:16:56</td>\n",
+       "      <td>Good luck today. Here's some WSB stats..\\nIf y...</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>14454</td>\n",
+       "      <td>287</td>\n",
+       "      <td>93493</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>l5c0nr</td>\n",
+       "      <td>1.611660e+09</td>\n",
+       "      <td>&lt;!-- SC_OFF --&gt;&lt;div class=\"md\"&gt;&lt;p&gt;Good luck to...</td>\n",
+       "      <td>t2_4nc92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59584</th>\n",
+       "      <td>GME Thoughts, YOLOs, Gains, Stonk Updates, 🚀🚀🚀...</td>\n",
+       "      <td>Dan_inKuwait</td>\n",
+       "      <td>2021-01-25 10:56:35</td>\n",
+       "      <td>Thanks all for the quick rise to max comments ...</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>18415</td>\n",
+       "      <td>370</td>\n",
+       "      <td>93425</td>\n",
+       "      <td>2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>l4lmrx</td>\n",
+       "      <td>1.611572e+09</td>\n",
+       "      <td>&lt;!-- SC_OFF --&gt;&lt;div class=\"md\"&gt;&lt;p&gt;Thanks all f...</td>\n",
+       "      <td>t2_12lizrk3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39713</th>\n",
+       "      <td>GMREEEEEEEEEEEE Containment Thread - GME shitp...</td>\n",
+       "      <td>grebfar</td>\n",
+       "      <td>2021-01-22 11:07:41</td>\n",
+       "      <td>Don't be doxxing citron or anyone else. That's...</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>14775</td>\n",
+       "      <td>201</td>\n",
+       "      <td>92927</td>\n",
+       "      <td>2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>l2ljpt</td>\n",
+       "      <td>1.611314e+09</td>\n",
+       "      <td>&lt;!-- SC_OFF --&gt;&lt;div class=\"md\"&gt;&lt;p&gt;Don&amp;#39;t be...</td>\n",
+       "      <td>t2_6oif2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>867399</th>\n",
+       "      <td>GME Megathread for March 10, 2021</td>\n",
+       "      <td>OPINION_IS_UNPOPULAR</td>\n",
+       "      <td>2021-03-10 13:30:11</td>\n",
+       "      <td>HOLYMOLYHOLYMOLYHOLYMOLYHOLYMOLYHOLYMOLYHOLYMO...</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>48293</td>\n",
+       "      <td>1056</td>\n",
+       "      <td>91112</td>\n",
+       "      <td>4</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>m1xhlc</td>\n",
+       "      <td>1.615383e+09</td>\n",
+       "      <td>&lt;!-- SC_OFF --&gt;&lt;div class=\"md\"&gt;&lt;p&gt;HOLYMOLYHOLY...</td>\n",
+       "      <td>t2_bd6q5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>799088</th>\n",
+       "      <td>GME Megathread for Wednesday, February 24th, 2021</td>\n",
+       "      <td>OPINION_IS_UNPOPULAR</td>\n",
+       "      <td>2021-02-24 14:24:58</td>\n",
+       "      <td>Enjoy this thread overnight. New one comes at ...</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>30214</td>\n",
+       "      <td>595</td>\n",
+       "      <td>86602</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>lre2k6</td>\n",
+       "      <td>1.614177e+09</td>\n",
+       "      <td>&lt;!-- SC_OFF --&gt;&lt;div class=\"md\"&gt;&lt;p&gt;Enjoy this t...</td>\n",
+       "      <td>t2_bd6q5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53306</th>\n",
+       "      <td>GME Megathread Part 2</td>\n",
+       "      <td>theycallmeryan</td>\n",
+       "      <td>2021-01-25 17:41:39</td>\n",
+       "      <td>Keep all $GME discussion and memes in here. No...</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>14255</td>\n",
+       "      <td>226</td>\n",
+       "      <td>86296</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>l4syrd</td>\n",
+       "      <td>1.611596e+09</td>\n",
+       "      <td>&lt;!-- SC_OFF --&gt;&lt;div class=\"md\"&gt;&lt;p&gt;Keep all $GM...</td>\n",
+       "      <td>t2_46fhw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>219910</th>\n",
+       "      <td>Daily Discussion Thread, Part 2, for January 2...</td>\n",
+       "      <td>OPINION_IS_UNPOPULAR</td>\n",
+       "      <td>2021-01-28 14:32:22</td>\n",
+       "      <td>Your daily trading discussion thread. Please k...</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>8524</td>\n",
+       "      <td>126</td>\n",
+       "      <td>86118</td>\n",
+       "      <td>4</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>l6y2hy</td>\n",
+       "      <td>1.611844e+09</td>\n",
+       "      <td>&lt;!-- SC_OFF --&gt;&lt;div class=\"md\"&gt;&lt;p&gt;Your daily t...</td>\n",
+       "      <td>t2_bd6q5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98340</th>\n",
+       "      <td>Daily Discussion Thread for January 27, 2021 -...</td>\n",
+       "      <td>GoBeaversOSU</td>\n",
+       "      <td>2021-01-27 16:59:10</td>\n",
+       "      <td>Your daily trading discussion thread. Please k...</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>4778</td>\n",
+       "      <td>170</td>\n",
+       "      <td>82113</td>\n",
+       "      <td>2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>l68y04</td>\n",
+       "      <td>1.611767e+09</td>\n",
+       "      <td>&lt;!-- SC_OFF --&gt;&lt;div class=\"md\"&gt;&lt;p&gt;Your daily t...</td>\n",
+       "      <td>t2_lb8ec</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    title  \\\n",
+       "104195                                  WSB Saturday Chat   \n",
+       "75319   The GME Afterhours Thread: Part 4.20 on 27 Jan...   \n",
+       "65024          The GME Thread Part 1 for January 26, 2021   \n",
+       "59584   GME Thoughts, YOLOs, Gains, Stonk Updates, 🚀🚀🚀...   \n",
+       "39713   GMREEEEEEEEEEEE Containment Thread - GME shitp...   \n",
+       "867399                  GME Megathread for March 10, 2021   \n",
+       "799088  GME Megathread for Wednesday, February 24th, 2021   \n",
+       "53306                               GME Megathread Part 2   \n",
+       "219910  Daily Discussion Thread, Part 2, for January 2...   \n",
+       "98340   Daily Discussion Thread for January 27, 2021 -...   \n",
+       "\n",
+       "                      author created_datetime_utc  \\\n",
+       "104195                   zjz  2020-04-18 21:27:15   \n",
+       "75319                grebfar  2021-01-27 21:26:35   \n",
+       "65024                    zjz  2021-01-26 11:16:56   \n",
+       "59584           Dan_inKuwait  2021-01-25 10:56:35   \n",
+       "39713                grebfar  2021-01-22 11:07:41   \n",
+       "867399  OPINION_IS_UNPOPULAR  2021-03-10 13:30:11   \n",
+       "799088  OPINION_IS_UNPOPULAR  2021-02-24 14:24:58   \n",
+       "53306         theycallmeryan  2021-01-25 17:41:39   \n",
+       "219910  OPINION_IS_UNPOPULAR  2021-01-28 14:32:22   \n",
+       "98340           GoBeaversOSU  2021-01-27 16:59:10   \n",
+       "\n",
+       "                                                 selftext  \\\n",
+       "104195  This definitely isn't a ploy to inflate our co...   \n",
+       "75319   Stop spamming copy pastes you boomers. Instaba...   \n",
+       "65024   Good luck today. Here's some WSB stats..\\nIf y...   \n",
+       "59584   Thanks all for the quick rise to max comments ...   \n",
+       "39713   Don't be doxxing citron or anyone else. That's...   \n",
+       "867399  HOLYMOLYHOLYMOLYHOLYMOLYHOLYMOLYHOLYMOLYHOLYMO...   \n",
+       "799088  Enjoy this thread overnight. New one comes at ...   \n",
+       "53306   Keep all $GME discussion and memes in here. No...   \n",
+       "219910  Your daily trading discussion thread. Please k...   \n",
+       "98340   Your daily trading discussion thread. Please k...   \n",
+       "\n",
+       "                                                      url  upvote_ratio  \\\n",
+       "104195  https://www.reddit.com/r/wallstreetbets/commen...          0.96   \n",
+       "75319   https://www.reddit.com/r/wallstreetbets/commen...          0.96   \n",
+       "65024   https://www.reddit.com/r/wallstreetbets/commen...          0.91   \n",
+       "59584   https://www.reddit.com/r/wallstreetbets/commen...          0.87   \n",
+       "39713   https://www.reddit.com/r/wallstreetbets/commen...          0.87   \n",
+       "867399  https://www.reddit.com/r/wallstreetbets/commen...          0.88   \n",
+       "799088  https://www.reddit.com/r/wallstreetbets/commen...          0.91   \n",
+       "53306   https://www.reddit.com/r/wallstreetbets/commen...          0.89   \n",
+       "219910  https://www.reddit.com/r/wallstreetbets/commen...          0.96   \n",
+       "98340   https://www.reddit.com/r/wallstreetbets/commen...          0.95   \n",
+       "\n",
+       "          ups  total_awards_received  num_comments  num_crossposts  is_self  \\\n",
+       "104195  10358                     42        100000               1     True   \n",
+       "75319   27614                    346         94198               2     True   \n",
+       "65024   14454                    287         93493               0     True   \n",
+       "59584   18415                    370         93425               2     True   \n",
+       "39713   14775                    201         92927               2     True   \n",
+       "867399  48293                   1056         91112               4     True   \n",
+       "799088  30214                    595         86602               1     True   \n",
+       "53306   14255                    226         86296               0     True   \n",
+       "219910   8524                    126         86118               4     True   \n",
+       "98340    4778                    170         82113               2     True   \n",
+       "\n",
+       "        is_video  media_only      id   created_utc  \\\n",
+       "104195     False       False  g3vew6  1.587245e+09   \n",
+       "75319      False       False  l6er79  1.611783e+09   \n",
+       "65024      False       False  l5c0nr  1.611660e+09   \n",
+       "59584      False       False  l4lmrx  1.611572e+09   \n",
+       "39713      False       False  l2ljpt  1.611314e+09   \n",
+       "867399     False       False  m1xhlc  1.615383e+09   \n",
+       "799088     False       False  lre2k6  1.614177e+09   \n",
+       "53306      False       False  l4syrd  1.611596e+09   \n",
+       "219910     False       False  l6y2hy  1.611844e+09   \n",
+       "98340      False       False  l68y04  1.611767e+09   \n",
+       "\n",
+       "                                            selftext_html author_fullname  \n",
+       "104195  <!-- SC_OFF --><div class=\"md\"><p>This definit...        t2_4nc92  \n",
+       "75319   <!-- SC_OFF --><div class=\"md\"><p>Stop spammin...        t2_6oif2  \n",
+       "65024   <!-- SC_OFF --><div class=\"md\"><p>Good luck to...        t2_4nc92  \n",
+       "59584   <!-- SC_OFF --><div class=\"md\"><p>Thanks all f...     t2_12lizrk3  \n",
+       "39713   <!-- SC_OFF --><div class=\"md\"><p>Don&#39;t be...        t2_6oif2  \n",
+       "867399  <!-- SC_OFF --><div class=\"md\"><p>HOLYMOLYHOLY...        t2_bd6q5  \n",
+       "799088  <!-- SC_OFF --><div class=\"md\"><p>Enjoy this t...        t2_bd6q5  \n",
+       "53306   <!-- SC_OFF --><div class=\"md\"><p>Keep all $GM...        t2_46fhw  \n",
+       "219910  <!-- SC_OFF --><div class=\"md\"><p>Your daily t...        t2_bd6q5  \n",
+       "98340   <!-- SC_OFF --><div class=\"md\"><p>Your daily t...        t2_lb8ec  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wsb[wsb.author != \"AutoModerator\"].sort_values(by = 'num_comments', ascending = False).head(10)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95405fe5",
+   "id": "0cd3a87d",
    "metadata": {},
    "outputs": [],
    "source": []
