Removed comment outliers and edited NLP notebook

--- a/ExploratoryDataAnalysis/Removing comment outliers.ipynb
+++ b/ExploratoryDataAnalysis/Removing comment outliers.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
        "364296  <!-- SC_OFF --><div class=\"md\"><p>Good luck to...        t2_4nc92  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -632,7 +632,7 @@
        "[1258623 rows x 18 columns]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
        "[1256458 rows x 18 columns]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1051,16 +1051,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1ee6d8d4a88>"
+       "<seaborn.axisgrid.PairGrid at 0x1b3a9987fc8>"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1084,16 +1084,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1ecc54a2848>"
+       "<seaborn.axisgrid.PairGrid at 0x1b3aa49f8c8>"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1117,16 +1117,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1ecc607a588>"
+       "<seaborn.axisgrid.PairGrid at 0x1b3b0aced88>"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1150,16 +1150,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1ee141d55c8>"
+       "<seaborn.axisgrid.PairGrid at 0x1b3d1c99e48>"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1555,7 +1555,7 @@
        "[1256458 rows x 18 columns]"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1566,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1929,7 +1929,7 @@
        "[1256458 rows x 18 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1940,16 +1940,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1ee16ede408>"
+       "<seaborn.axisgrid.PairGrid at 0x1b3d3ea5788>"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1975,7 +1975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1986,7 +1986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2184,7 +2184,7 @@
        "694562                                                NaN        t2_cxvua  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2195,17 +2195,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error, r2_score"
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2214,59 +2215,60 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(wsb2['num_comments'], wsb2['ups'], test_size=0.2, random_state=403)\n",
     "reg=LinearRegression(copy_X=True)\n",
-    "reg.fit(np.array(wsb2['num_comments']).reshape(-1,1),wsb2['ups'])"
+    "reg.fit(np.array(X_train).reshape(-1,1),y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5943655087622779"
+       "0.5991095359623252"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r2_score(wsb2['ups'],reg.predict(np.array(wsb2['num_comments']).reshape(-1,1)))"
+    "r2_score(y_train,reg.predict(np.array(X_train).reshape(-1,1)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-317.3864156574796"
+       "0.5752743513128427"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reg.intercept_"
+    "r2_score(y_test,reg.predict(np.array(X_test).reshape(-1,1)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2275,7 +2277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2317,6 +2319,30 @@
     "\n",
     "# type this to show the plot\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.294928242568243"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#how bad is it if we just don't remove the outliers?\n",
+    "wsb3=wsbcut.loc[(wsbcut.ups>=10)]\n",
+    "reg=LinearRegression(copy_X=True)\n",
+    "reg.fit(np.array(wsb3['num_comments']).reshape(-1,1),wsb3['ups'])\n",
+    "r2_score(wsb3['ups'],reg.predict(np.array(wsb3['num_comments']).reshape(-1,1)))"
    ]
   },
   {
